--- a/src/assets/locales/de.json
+++ b/src/assets/locales/de.json
@@ -3,18 +3,18 @@
     "description": "kami-movie ist eine Web-App, welche das Internet nach Streams durchsucht. Das Team versucht einen minimalistischen Ansatz umzusetzen.",
     "faqTitle": "Häufig gestellte Fragen",
     "q1": {
-      "body": "kami-movie hostet keinen eigenen Inhalt. Wenn du auf etwas zum Anschauen klickst, wird das Internet danach durchsucht (Auf dem Ladebildschirm und im Tab \"Videoquellen\" kannst du einstellen, welche Quellen verwendet werden sollen). movie-web lädt keine Videos hoch, alleVideos stammen aus der Suche.",
+      "body": "kami-movie hostet keinen eigenen Inhalt. Wenn du auf etwas zum Anschauen klickst, wird das Internet danach durchsucht (Auf dem Ladebildschirm und im Tab \"Videoquellen\" kannst du einstellen, welche Quellen verwendet werden sollen). kami-movie lädt keine Videos hoch, alleVideos stammen aus der Suche.",
       "title": "Woher stammen die Videos?"
     },
     "q2": {
-      "body": "Das Anfragen von Serien oder Filmen ist nicht möglich. movie-web verwaltet keine Inhalte. Alle Videos stammen vom Quellen aus dem Internet.",
+      "body": "Das Anfragen von Serien oder Filmen ist nicht möglich. kami-movie verwaltet keine Inhalte. Alle Videos stammen vom Quellen aus dem Internet.",
       "title": "Wo kann ich eine Serie oder einen Film anfragen?"
     },
     "q3": {
       "body": "Unsere Suchergebnisse werden von The Movie Database (TMDB) bereitgestellt und, egal ob unsere Videoquellen über dieses Video verfügen, angezeigt.",
       "title": "Die Suche zeigt eine Serie oder einen Film an, warum kann ich den dann nicht abspielen?"
     },
-    "title": "Über movie-web"
+    "title": "Über kami-movie"
   },
   "actions": {
     "copied": "Kopiert",
@@ -57,6 +57,8 @@
       },
       "host": "Du verbindest dich mit <0>{{hostname}}</0> - stelle sicher das du dem Server vertraust, bevor du ein Konto erstellst",
       "no": "Zurück",
+      "noHost": "Da der Server nicht eingerichtet wurde, kannst du keinen Account erstellen",
+      "noHostTitle": "Server nicht eingerichtet!",
       "title": "Vertraust du diesem Server?",
       "yes": "Ich vertraue diesem Server"
     },
@@ -80,7 +82,7 @@
   "footer": {
     "legal": {
       "disclaimer": "Hinweis",
-      "disclaimerText": "movie-web hostet keine Dateien, sondern verlinkt lediglich auf Dienste Dritter. Rechtliche Fragen sollten mit den Dateihostern und -anbietern geklärt werden. movie-web übernimmt keine Verantwortung für die von den Videoanbietern angezeigten Mediendateien."
+      "disclaimerText": "kami-movie hostet keine Dateien, sondern verlinkt lediglich auf Dienste Dritter. Rechtliche Fragen sollten mit den Dateihostern und -anbietern geklärt werden. kami-movie übernimmt keine Verantwortung für die von den Videoanbietern angezeigten Mediendateien."
     },
     "links": {
       "discord": "Discord",
@@ -118,7 +120,12 @@
       "noResults": "Wir haben nichts gefunden!",
       "placeholder": {
         "default": "Was möchtest du schauen?",
-        "extra": []
+        "extra": [
+          "Was möchtest du entdecken?",
+          "Was ist auf deiner Merkliste?",
+          "Was ist dein Lieblingsfilm?",
+          "Was ist deine Lieblingsserie?"
+        ]
       },
       "sectionTitle": "Suchergebnisse"
     },
@@ -225,7 +232,7 @@
           "title": "Eigene Proxy"
         }
       },
-      "title": "Lass uns mit der Einrichtung von movie-web starten"
+      "title": "Lass uns mit der Einrichtung von kami-movie starten"
     }
   },
   "overlays": {
@@ -241,10 +248,11 @@
     },
     "menus": {
       "downloads": {
-        "disclaimer": "Videos werden direkt vom Provider heruntergeladen. movie-web hat keinen Einfluss darauf, wie Downloads bereitgestellt werden.",
+        "copyHlsPlaylist": "HLS-Playlist Link kopieren",
+        "disclaimer": "Videos werden direkt vom Provider heruntergeladen. kami-movie hat keinen Einfluss darauf, wie Downloads bereitgestellt werden.",
         "downloadSubtitle": "Aktuelle Untertitel herunterladen",
         "downloadVideo": "Video herunterladen",
-        "hlsDisclaimer": "movie-web hat keinen Einfluss darauf, wie Downloads bereitgestellt werden. Downloads werden direkt vom Anbieter bezogen. <br /><br />Bitte beachte, dass du eine HLS-Wiedergabeliste herunterlädst, <bold>dies ist nicht empfohlen für Nutzer die nicht mit Erweiterten Streaming Formaten vertraut sind</bold>. Probiere andere Anbieter für andere Formate.",
+        "hlsDisclaimer": "kami-movie hat keinen Einfluss darauf, wie Downloads bereitgestellt werden. Downloads werden direkt vom Anbieter bezogen. <br /><br />Bitte beachte, dass du eine HLS-Wiedergabeliste herunterlädst, <bold>dies ist nicht empfohlen für Nutzer die nicht mit Erweiterten Streaming Formaten vertraut sind</bold>. Probiere andere Anbieter für andere Formate.",
         "onAndroid": {
           "1": "Um auf Android Herunterzuladen, tippe auf den Download-Button, <bold>tippe und halte</bold> auf der neuen Seite auf das Video und wähle <bold>Speichern</bold> aus.",
           "shortTitle": "Download / Android",
@@ -387,7 +395,7 @@
       "shortRemaining": "-{{timeLeft}}"
     },
     "turnstile": {
-      "description": "Bitte verifiziere deine Menschlichkeit mit dem Captcha auf der Rechten Seite. Dies ist um movie-web sicher zu halten!",
+      "description": "Bitte verifiziere deine Menschlichkeit mit dem Captcha auf der Rechten Seite. Dies ist um kami-movie sicher zu halten!",
       "error": "Menschlichkeit konnte nicht verifiziert werden. Bitte versuche es erneut.",
       "title": "Wir müssen sicherstellen, dass du Menschlich bist.",
       "verifyingHumanity": "Verifiziere deine Menschlichkeit..."
@@ -395,7 +403,7 @@
   },
   "screens": {
     "dmca": {
-      "text": "Willkommen zu movie-webs DMCA-Kontaktseite! Wir respektieren geistiges Eigentum und wollen uns schnell um urheberrechtlichen Anliegen kümmern. Falls du glaubst, dass dein urheberrechtlich geschütztes Werk unsachgemäß auf unserer Plattform verwendet wurde, sende uns bitte eine genaue DMCA-Anfrage an die unten stehende E-Mail. Diese sollte eine Beschreibung des urheberrechtlich geschützten Material, deine Kontaktinformationen sowie einer Erklärung des guten Glaubens beinhalten. Wir sind engagiert diese Anliegen schnell zu lösen und schätzen deine Hilfe dabei movie-web zu einer Plattform, welche Kreativität und Urheberrechte respektiert.",
+      "text": "Willkommen zu kami-movies DMCA-Kontaktseite! Wir respektieren geistiges Eigentum und wollen uns schnell um urheberrechtlichen Anliegen kümmern. Falls du glaubst, dass dein urheberrechtlich geschütztes Werk unsachgemäß auf unserer Plattform verwendet wurde, sende uns bitte eine genaue DMCA-Anfrage an die unten stehende E-Mail. Diese sollte eine Beschreibung des urheberrechtlich geschützten Material, deine Kontaktinformationen sowie einer Erklärung des guten Glaubens beinhalten. Wir sind engagiert diese Anliegen schnell zu lösen und schätzen deine Hilfe dabei kami-movie zu einer Plattform, welche Kreativität und Urheberrechte respektiert.",
       "title": "DMCA"
     },
     "loadingApp": "Die App wird geladen",
@@ -524,6 +532,7 @@
       }
     },
     "subtitles": {
+      "backgroundBlurLabel": "Hintergrundunschärfe",
       "backgroundLabel": "Hintergrunddeckkraft",
       "colorLabel": "Farbe",
       "previewQuote": "Das Gras wächst nicht schneller, wenn man daran zieht.",
