--- a/src/assets/locales/et.json
+++ b/src/assets/locales/et.json
@@ -3,18 +3,18 @@
     "description": "kami-movie on veebirakendus, mis otsib internetti striimide jaoks. Meie eesmärk on enamasti minimalistlik lähenemine sisu tarbimisele.",
     "faqTitle": "Tihti küsitud küsimused",
     "q1": {
-      "body": "kami-movie ei hoiusta enda sisu. Kui klõpsate, et midagi vaadata, otsitakse valitud meediat internetist (laadimisekraanil ja vahekaardil \"videoallikad\" näete, millist allikat te kasutate). Meediat ei lae movie-web kunagi üles, kõik toimub selle otsingumehhanismi kaudu.",
+      "body": "kami-movie ei hoiusta enda sisu. Kui klõpsate, et midagi vaadata, otsitakse valitud meediat internetist (laadimisekraanil ja vahekaardil \"videoallikad\" näete, millist allikat te kasutate). Meediat ei lae kami-movie kunagi üles, kõik toimub selle otsingumehhanismi kaudu.",
       "title": "Kust tuleb meie sisu?"
     },
     "q2": {
-      "body": "Saadet või filmi ei ole võimalik taotelda, movie-web ei halda mingit sisu. Kogu sisu vaadatakse interneti allikate kaudu.",
+      "body": "Saadet või filmi ei ole võimalik taotelda, kami-movie ei halda mingit sisu. Kogu sisu vaadatakse interneti allikate kaudu.",
       "title": "Kust ma saan kindlat saadet või filmi paluda?"
     },
     "q3": {
       "body": "Meie otsingutulemusi toetab The Movie Database (TMDB) ja need kuvatakse sõltumata sellest, kas meie allikates on sisu tegelikult olemas.",
       "title": "Otsingutulemustes kuvatakse saade või film. Miks ma ei saa seda esitada?"
     },
-    "title": "movie-web'i kohta"
+    "title": "kami-movie'i kohta"
   },
   "actions": {
     "copied": "Kopeeritud",
@@ -57,6 +57,8 @@
       },
       "host": "Ühendate <0>{{hostname}}</0> - enne konto tegemist kinnitage, et usaldate seda",
       "no": "Tagasi",
+      "noHost": "Server ei ole konfigureeritud, seega ei saa kontot luua",
+      "noHostTitle": "Server ei ole konfigureeritud!",
       "title": "Kas usaldate seda serverit?",
       "yes": "Usaldan seda serverit"
     },
@@ -80,7 +82,7 @@
   "footer": {
     "legal": {
       "disclaimer": "Lahtiütlemine",
-      "disclaimerText": "movie-web ei hoiusta ühtegi faili, vaid ainult lingib kolmandate osapoolte teenustele. Juriidilised küsimused tuleks lahendada failihostide ja teenusepakkujatega. movie-web ei vastuta videopakkujate poolt näidatud meediafailide eest."
+      "disclaimerText": "kami-movie ei hoiusta ühtegi faili, vaid ainult lingib kolmandate osapoolte teenustele. Juriidilised küsimused tuleks lahendada failihostide ja teenusepakkujatega. kami-movie ei vastuta videopakkujate poolt näidatud meediafailide eest."
     },
     "links": {
       "discord": "Discord",
@@ -118,7 +120,12 @@
       "noResults": "Me ei leidnud midagi!",
       "placeholder": {
         "default": "Mida tahate vaadata?",
-        "extra": []
+        "extra": [
+          "Mida soovite uurida?",
+          "Mis on teie nimekirjas?",
+          "Milline on teie lemmikfilm?",
+          "Milline on teie lemmiksari?"
+        ]
       },
       "sectionTitle": "Otsingutulemused"
     },
@@ -225,7 +232,7 @@
           "title": "Kohandatud proxy"
         }
       },
-      "title": "Teeme algust movie-webi kasutamisega"
+      "title": "Teeme algust kami-moviei kasutamisega"
     }
   },
   "overlays": {
@@ -241,10 +248,11 @@
     },
     "menus": {
       "downloads": {
-        "disclaimer": "Allalaadimine toimub otse teenusepakkujalt. movie-web ei saa kontrollida, kuidas allalaadimine toimub.",
+        "copyHlsPlaylist": "Kopeeri HLS esitusloendi link",
+        "disclaimer": "Allalaadimine toimub otse teenusepakkujalt. kami-movie ei saa kontrollida, kuidas allalaadimine toimub.",
         "downloadSubtitle": "Laadige alla praegune subtiiter",
         "downloadVideo": "Lae alla video",
-        "hlsDisclaimer": "Allalaadimised võetakse otse teenusepakkujalt. movie-web ei kontrolli, kuidas allalaadimisi pakutakse. <br /><br /><bold>Pange tähele, et laadite alla HLS-i esitusloendit, see on mõeldud kasutajatele, kes on tuttavad multimeediumi striimimisega</bold>.",
+        "hlsDisclaimer": "Allalaadimised võetakse otse teenusepakkujalt. kami-movie ei kontrolli, kuidas allalaadimisi pakutakse. <br /><br /><bold>Pange tähele, et laadite alla HLS-i esitusloendit, see on mõeldud kasutajatele, kes on tuttavad multimeediumi striimimisega</bold>.",
         "onAndroid": {
           "1": "Et allalaadida Androidi telefonil, vajuta allalaadimise nupule, siis uuel leheküljel <bold>vajuta ja hoia</bold> video peal, siis vali <bold>salvesta</bold>.",
           "shortTitle": "Allalaadimine / Android",
@@ -387,7 +395,7 @@
       "shortRemaining": "-{{timeLeft}}"
     },
     "turnstile": {
-      "description": "Palun kinnitage, et olete inimene, täites paremal asuva Captcha. See on selleks, et hoida movie-web turvalisena!",
+      "description": "Palun kinnitage, et olete inimene, täites paremal asuva Captcha. See on selleks, et hoida kami-movie turvalisena!",
       "error": "Ei õnnestunud kontrollida teie inimlikkust. Palun proovige uuesti.",
       "title": "Me peame kontrollima, et te olete inimene.",
       "verifyingHumanity": "Kontrollime kas olete robot..."
@@ -395,7 +403,7 @@
   },
   "screens": {
     "dmca": {
-      "text": "Tere tulemast movie-webi DMCA kontaktilehele! Me austame intellektuaalomandi õigusi ja soovime kiiresti lahendada kõik autoriõigusega seotud probleemid. Kui usute, et teie autoriõigusega kaitstud tööd on meie platvormil vääralt kasutatud, saatke palun üksikasjalik DMCA-teade alljärgnevale e-posti aadressile. Palun lisage autoriõigusega kaitstud materjali kirjeldus, oma kontaktandmed ja avaldus heauskse veendumuse kohta. Oleme pühendunud nende küsimuste kiirele lahendamisele ja hindame teie koostööd, et movie-web oleks koht, kus austatakse loovust ja autoriõigusi.",
+      "text": "Tere tulemast kami-moviei DMCA kontaktilehele! Me austame intellektuaalomandi õigusi ja soovime kiiresti lahendada kõik autoriõigusega seotud probleemid. Kui usute, et teie autoriõigusega kaitstud tööd on meie platvormil vääralt kasutatud, saatke palun üksikasjalik DMCA-teade alljärgnevale e-posti aadressile. Palun lisage autoriõigusega kaitstud materjali kirjeldus, oma kontaktandmed ja avaldus heauskse veendumuse kohta. Oleme pühendunud nende küsimuste kiirele lahendamisele ja hindame teie koostööd, et kami-movie oleks koht, kus austatakse loovust ja autoriõigusi.",
       "title": "DMCA"
     },
     "loadingApp": "Rakenduse laadimine",
@@ -524,6 +532,7 @@
       }
     },
     "subtitles": {
+      "backgroundBlurLabel": "Tausta hägusus",
       "backgroundLabel": "Tausta läbipaistmatus",
       "colorLabel": "Värv",
       "previewQuote": "Ma ei tohi karta. Hirm on meelemõrvar.",
