--- a/src/assets/locales/km.json
+++ b/src/assets/locales/km.json
@@ -13,7 +13,7 @@
       "body": "លទ្ធផលស្វែងរករបស់យើងត្រូវបានដំណើរការដោយ The Movie Database (TMDB) ហើយបង្ហាញដោយមិនខ្វល់ពីប្រភពរបស់យើងមានខ្លឹមសារឬ​អត់ទេ។",
       "title": "លទ្ធផលស្វែងរកបង្ហាញកម្មវិធី ឬ ភាពយន្ត ហេតុអ្វីខ្ញុំមិនអាចមើលបាន?"
     },
-    "title": "អំពី movie-web"
+    "title": "អំពី kami-movie"
   },
   "actions": {
     "copied": "បានចម្លង",
