--- a/src/assets/locales/ne.json
+++ b/src/assets/locales/ne.json
@@ -7,14 +7,14 @@
       "title": "सामग्री कहाँबाट आउँछ?"
     },
     "q2": {
-      "body": "कार्यक्रम वा चलचित्र अनुरोध गर्न सम्भव छैन, movie-webले कुनै पनि सामग्री व्यवस्थापन गर्दैन। सबै सामग्री इन्टरनेटमा स्रोतहरू मार्फत हेरिन्छ।",
+      "body": "कार्यक्रम वा चलचित्र अनुरोध गर्न सम्भव छैन, kami-movieले कुनै पनि सामग्री व्यवस्थापन गर्दैन। सबै सामग्री इन्टरनेटमा स्रोतहरू मार्फत हेरिन्छ।",
       "title": "म कहाँ कार्यक्रम वा चलचित्र अनुरोध गर्न सक्छु?"
     },
     "q3": {
       "body": "हाम्रा खोज परिणामहरू चलचित्र डाटाबेस (TMDB) द्वारा संचालित हुन्छन् र हाम्रा स्रोतहरूमा साँच्चै सामग्री छ कि छैन भनी प्रदर्शन गरिन्छ।",
       "title": "खोज परिणामहरूले कार्यक्रम वा चलचित्र प्रदर्शन गर्दछ, म यसलाई किन प्ले गर्न सक्दिन?"
     },
-    "title": "movie-web बारेमा"
+    "title": "kami-movie बारेमा"
   },
   "actions": {
     "copied": "कपी भयो",
@@ -82,7 +82,7 @@
   "footer": {
     "legal": {
       "disclaimer": "अस्वीकरण",
-      "disclaimerText": "movie-webले कुनै पनि फाइलहरू होस्ट गर्दैन, यसले केवल तेस्रो पक्ष सेवाहरूमा लिङ्क गर्दछ। कानुनी मुद्दाहरू फाइल होस्ट र प्रदायकहरूसँग लिनु पर्छ। चलचित्र-वेब भिडियो प्रदायकहरू द्वारा देखाइएका कुनै पनि मिडिया फाइलहरूको लागि जिम्मेवार छैन।"
+      "disclaimerText": "kami-movieले कुनै पनि फाइलहरू होस्ट गर्दैन, यसले केवल तेस्रो पक्ष सेवाहरूमा लिङ्क गर्दछ। कानुनी मुद्दाहरू फाइल होस्ट र प्रदायकहरूसँग लिनु पर्छ। चलचित्र-वेब भिडियो प्रदायकहरू द्वारा देखाइएका कुनै पनि मिडिया फाइलहरूको लागि जिम्मेवार छैन।"
     },
     "links": {
       "discord": "Discord",
@@ -138,15 +138,11 @@
       },
       "morning": {
         "default": "तपाई आज बिहान के हेर्न चाहनुहुन्छ?",
-        "extra": [
-          "Before Sunrise राम्रो छ भन्ने सुन्छु"
-        ]
+        "extra": ["Before Sunrise राम्रो छ भन्ने सुन्छु"]
       },
       "night": {
         "default": "तपाईं आज राती के हेर्न चाहनुहुन्छ?",
-        "extra": [
-          "थकित? मैले सुनेको छु The Exorcist राम्रो छ।"
-        ]
+        "extra": ["थकित? मैले सुनेको छु The Exorcist राम्रो छ।"]
       }
     }
   },
@@ -236,7 +232,7 @@
           "title": "आफ्नै प्रोक्सी"
         }
       },
-      "title": "तपाईँलाई movie-web सँग सेटअप गरौं"
+      "title": "तपाईँलाई kami-movie सँग सेटअप गरौं"
     }
   },
   "overlays": {
@@ -253,7 +249,7 @@
     "menus": {
       "downloads": {
         "copyHlsPlaylist": "HLS प्लेलिस्ट लिङ्क कपि गर्नुहोस्",
-        "disclaimer": "डाउनलोडहरू सीधा प्रदायकबाट लिइन्छ। movie-web ले डाउनलोडहरू कसरी प्रदान गरिन्छ भन्नेमा नियन्त्रण गर्दैन।",
+        "disclaimer": "डाउनलोडहरू सीधा प्रदायकबाट लिइन्छ। kami-movie ले डाउनलोडहरू कसरी प्रदान गरिन्छ भन्नेमा नियन्त्रण गर्दैन।",
         "downloadSubtitle": "हालको उपशीर्षक डाउनलोड गर्नुहोस्",
         "downloadVideo": "डाउनलोड भिडियो",
         "hlsDisclaimer": "डाउनलोडहरू सीधा प्रदायकबाट लिइन्छ। चलचित्र-वेबको डाउनलोडहरू कसरी प्रदान गरिन्छ भन्नेमा नियन्त्रण छैन।<br /><br />कृपया ध्यान दिनुहोस् कि तपाइँ HLS प्लेलिस्ट डाउनलोड गर्दै हुनुहुन्छ, <bold>यदि तपाइँ उन्नत स्ट्रिमिङ ढाँचाहरूसँग परिचित हुनुहुन्न भने यसलाई डाउनलोड गर्न सिफारिस गरिँदैन। </bold>। विभिन्न ढाँचाहरूको लागि विभिन्न स्रोतहरू प्रयास गर्नुहोस्।",
@@ -399,7 +395,7 @@
       "shortRemaining": "-{{timeLeft}}"
     },
     "turnstile": {
-      "description": "कृपया दायाँपट्टि Captch पूरा गरेर तपाईं मानव हुनुहुन्छ भनी प्रमाणित गर्नुहोस्। यो movie-web लाई सुरक्षित राख्न को लागी हो!",
+      "description": "कृपया दायाँपट्टि Captch पूरा गरेर तपाईं मानव हुनुहुन्छ भनी प्रमाणित गर्नुहोस्। यो kami-movie लाई सुरक्षित राख्न को लागी हो!",
       "error": "तपाईंको मानवता प्रमाणित गर्न असफल भयौ। फेरि प्रयास गर्नुहोस।",
       "title": "हामीले तपाईं मानव हुनुहुन्छ भनेर प्रमाणित गर्न आवश्यक छ।",
       "verifyingHumanity": "तपाईंको मानवता प्रमाणित हुदैछ..."
@@ -407,7 +403,7 @@
   },
   "screens": {
     "dmca": {
-      "text": "movie-web को DMCA सम्पर्क पृष्ठमा स्वागत छ! हामी बौद्धिक सम्पत्ति अधिकारको सम्मान गर्छौं र कुनै पनि प्रतिलिपि अधिकार सरोकारलाई तुरुन्तै सम्बोधन गर्न चाहन्छौं। यदि तपाइँ तपाइँको प्रतिलिपि अधिकार कार्य हाम्रो प्लेटफर्ममा अनुचित रूपमा प्रयोग भएको विश्वास गर्नुहुन्छ भने, कृपया तलको इमेलमा विस्तृत DMCA सूचना पठाउनुहोस्। कृपया प्रतिलिपि अधिकार सामग्रीको विवरण, तपाईंको सम्पर्क विवरणहरू, र राम्रो विश्वासको कथन समावेश गर्नुहोस्। हामी यी मामिलाहरू तुरुन्तै समाधान गर्न प्रतिबद्ध छौं र चलचित्र-वेबलाई रचनात्मकता र प्रतिलिपि अधिकारको सम्मान गर्ने ठाउँ राख्नमा तपाईंको सहयोगको कदर गर्छौं।",
+      "text": "kami-movie को DMCA सम्पर्क पृष्ठमा स्वागत छ! हामी बौद्धिक सम्पत्ति अधिकारको सम्मान गर्छौं र कुनै पनि प्रतिलिपि अधिकार सरोकारलाई तुरुन्तै सम्बोधन गर्न चाहन्छौं। यदि तपाइँ तपाइँको प्रतिलिपि अधिकार कार्य हाम्रो प्लेटफर्ममा अनुचित रूपमा प्रयोग भएको विश्वास गर्नुहुन्छ भने, कृपया तलको इमेलमा विस्तृत DMCA सूचना पठाउनुहोस्। कृपया प्रतिलिपि अधिकार सामग्रीको विवरण, तपाईंको सम्पर्क विवरणहरू, र राम्रो विश्वासको कथन समावेश गर्नुहोस्। हामी यी मामिलाहरू तुरुन्तै समाधान गर्न प्रतिबद्ध छौं र चलचित्र-वेबलाई रचनात्मकता र प्रतिलिपि अधिकारको सम्मान गर्ने ठाउँ राख्नमा तपाईंको सहयोगको कदर गर्छौं।",
       "title": "DMCA"
     },
     "loadingApp": "एप लोड हुदैछ",
