--- a/src/assets/locales/ta.json
+++ b/src/assets/locales/ta.json
@@ -14,7 +14,7 @@
       "body": "எங்கள் தேடல் முடிவுகள் The Movie Database (TMDB) தரவு தளம் மூலம் வழங்கப்படுகிறது. தேடல் முடிவுகள் தேடலுக்கான பதிவுகளை கட்டாயம் உள்ளடக்கி இருக்கும் என்பதை உறுதியாக கூற இயலாது.",
       "title": "தேடல் முடிவுகள் திரைப்படம் அல்லது தொடரை காட்டுகிறது. ஆனால், ஏன் என்னால் அதை பார்க்க முடியவில்லை?"
     },
-    "title": "movie-web பற்றி"
+    "title": "kami-movie பற்றி"
   },
   "actions": {
     "copied": "நகலெடுக்கப்பட்டது",
@@ -127,15 +127,11 @@
       },
       "morning": {
         "default": "காலை வணக்கம். தற்போது என்ன காண விரும்புகிறீர்கள்?",
-        "extra": [
-          "சூரிய உதயத்திற்கு முன் நல்லது என்று கேள்விப்படுகிறேன்"
-        ]
+        "extra": ["சூரிய உதயத்திற்கு முன் நல்லது என்று கேள்விப்படுகிறேன்"]
       },
       "night": {
         "default": "இன்றைய இரவு என்ன காண விரும்புகிறீர்கள்?",
-        "extra": [
-          "சோர்வாக உள்ளீர்களா? Exorcist திரைப்படம் காணுங்கள்."
-        ]
+        "extra": ["சோர்வாக உள்ளீர்களா? Exorcist திரைப்படம் காணுங்கள்."]
       }
     }
   },
