--- a/src/assets/locales/ca@valencia.json
+++ b/src/assets/locales/ca@valencia.json
@@ -3,18 +3,18 @@
     "description": "kami-movie és una aplicació web que cerca fluxos a internet. L'equip té com a objectiu un enfocament majoritàriament minimalista del consum de contingut.",
     "faqTitle": "Preguntes freqüents",
     "q1": {
-      "body": "kami-movie no allotja cap contingut. Quan feu clic en un contingut per a mirar-lo, es busca a Internet (a la pantalla de càrrega i a la pestanya «Fonts de vídeo» podeu mirar quina font utilitzeu). movie-web mai puja contingut, tot és a través del mecanisme de cerca.",
+      "body": "kami-movie no allotja cap contingut. Quan feu clic en un contingut per a mirar-lo, es busca a Internet (a la pantalla de càrrega i a la pestanya «Fonts de vídeo» podeu mirar quina font utilitzeu). kami-movie mai puja contingut, tot és a través del mecanisme de cerca.",
       "title": "D'on prové el contingut?"
     },
     "q2": {
-      "body": "No és possible sol·licitar un programa o una pel·lícula, movie-web no gestiona cap contingut. Tot el contingut es visualitza a través de fonts a internet.",
+      "body": "No és possible sol·licitar un programa o una pel·lícula, kami-movie no gestiona cap contingut. Tot el contingut es visualitza a través de fonts a internet.",
       "title": "On puc sol·licitar un programa o una pel·lícula?"
     },
     "q3": {
       "body": "Els resultats de cerca funcionen amb The Movie Database (TMDB) i es mostren independentment de si les nostres fonts realment tenen el contingut.",
       "title": "Els resultats de la cerca mostren el programa o la pel·lícula, per què no puc reproduir-lo?"
     },
-    "title": "Sobre movie-web"
+    "title": "Sobre kami-movie"
   },
   "actions": {
     "copied": "S'ha copiat",
@@ -82,7 +82,7 @@
   "footer": {
     "legal": {
       "disclaimer": "Avís d'exempció de responsabilitat",
-      "disclaimerText": "movie-web no allotja cap fitxer, només enllaça a serveis de tercers. Els problemes legals s'han d'abordar amb qui allotja i els proveïdors de fitxers. movie-web no es fa responsable del contingut mostrat pels proveïdors de vídeo."
+      "disclaimerText": "kami-movie no allotja cap fitxer, només enllaça a serveis de tercers. Els problemes legals s'han d'abordar amb qui allotja i els proveïdors de fitxers. kami-movie no es fa responsable del contingut mostrat pels proveïdors de vídeo."
     },
     "links": {
       "discord": "Discord",
@@ -138,15 +138,11 @@
       },
       "morning": {
         "default": "Què vos agradaria mirar este matí?",
-        "extra": [
-          "He sentit que «Abans de l'alba» és bona"
-        ]
+        "extra": ["He sentit que «Abans de l'alba» és bona"]
       },
       "night": {
         "default": "Què vos agradaria mirar esta nit?",
-        "extra": [
-          "Esteu cansat? He sentit que «L'exorcista» és bona."
-        ]
+        "extra": ["Esteu cansat? He sentit que «L'exorcista» és bona."]
       }
     }
   },
@@ -236,7 +232,7 @@
           "title": "Servidor intermediari personalitzat"
         }
       },
-      "title": "Configurem el movie-web"
+      "title": "Configurem el kami-movie"
     }
   },
   "overlays": {
@@ -253,10 +249,10 @@
     "menus": {
       "downloads": {
         "copyHlsPlaylist": "Copia l'enllaç de la llista HLS",
-        "disclaimer": "Les baixades s'obtenen directament del proveïdor. movie-web no té control sobre com es proporcionen les baixades.",
+        "disclaimer": "Les baixades s'obtenen directament del proveïdor. kami-movie no té control sobre com es proporcionen les baixades.",
         "downloadSubtitle": "Baixa els subtítols actuals",
         "downloadVideo": "Baixa el vídeo",
-        "hlsDisclaimer": "Les baixades s'obtenen directament del proveïdor. movie-web no té control sobre com es proporcionen les baixades. <br /><br />Tingueu en compte que esteu baixant una llista de reproducció HLS, <bold>no es recomana baixar-la si no esteu familiaritzat amb formats de transmissió avançats</bold>. Proveu diferents fonts per a diferents formats.",
+        "hlsDisclaimer": "Les baixades s'obtenen directament del proveïdor. kami-movie no té control sobre com es proporcionen les baixades. <br /><br />Tingueu en compte que esteu baixant una llista de reproducció HLS, <bold>no es recomana baixar-la si no esteu familiaritzat amb formats de transmissió avançats</bold>. Proveu diferents fonts per a diferents formats.",
         "onAndroid": {
           "1": "Per a baixar-lo a Android, feu clic al botó de baixada i, a la pàgina nova, <bold>manteniu premut</bold> el vídeo i, a continuació, seleccioneu <bold>Desa</bold>.",
           "shortTitle": "Baixa / Android",
@@ -399,7 +395,7 @@
       "shortRemaining": "-{{timeLeft}}"
     },
     "turnstile": {
-      "description": "Verifiqueu que sou humà completant el Captcha de la dreta. Ho fem per a mantindre segura movie-web!",
+      "description": "Verifiqueu que sou humà completant el Captcha de la dreta. Ho fem per a mantindre segura kami-movie!",
       "error": "No s'ha pogut verificar la humanitat. Torneu-ho a provar.",
       "title": "Necessitem verificar que sou humà.",
       "verifyingHumanity": "Verificant la vostra humanitat…"
@@ -407,7 +403,7 @@
   },
   "screens": {
     "dmca": {
-      "text": "Vos donem la benvinguda a la pàgina de contacte DMCA de movie-web! Respectem els drets de propietat intel·lectual i volem resoldre qualsevol problema de drets d'autor ràpidament. Si creieu que la vostra obra protegida per drets d'autor s'ha utilitzat incorrectament a la nostra plataforma, envieu un avís detallat de la DMCA al correu electrònic següent. Incloeu una descripció del material protegit per drets d'autor, les vostres dades de contacte i una declaració de creença de bona fe. Ens comprometem a resoldre estes assumptes amb agilitat i agraïm la vostra col·laboració per a mantindre movie-web en un lloc que respecta la creativitat i els drets d'autor.",
+      "text": "Vos donem la benvinguda a la pàgina de contacte DMCA de kami-movie! Respectem els drets de propietat intel·lectual i volem resoldre qualsevol problema de drets d'autor ràpidament. Si creieu que la vostra obra protegida per drets d'autor s'ha utilitzat incorrectament a la nostra plataforma, envieu un avís detallat de la DMCA al correu electrònic següent. Incloeu una descripció del material protegit per drets d'autor, les vostres dades de contacte i una declaració de creença de bona fe. Ens comprometem a resoldre estes assumptes amb agilitat i agraïm la vostra col·laboració per a mantindre kami-movie en un lloc que respecta la creativitat i els drets d'autor.",
       "title": "DMCA"
     },
     "loadingApp": "S'està carregant l'aplicació",
@@ -437,7 +433,7 @@
           "confirmButton": "Elimina el compte",
           "confirmDescription": "Segur que voleu eliminar el compte? Es perdran totes les dades!",
           "confirmTitle": "Segur?",
-          "text": "esta acció és irreversible. Totes les dades s'eliminaran i no es podrà recuperar res.",
+          "text": "Esta acció és irreversible. Totes les dades s'eliminaran i no es podrà recuperar res.",
           "title": "Elimina el compte"
         },
         "title": "Accions"
