--- a/src/assets/locales/cs.json
+++ b/src/assets/locales/cs.json
@@ -3,18 +3,18 @@
     "description": "kami-movie je webová aplikace, která vyhledává na internetu proudy médií. Cílem týmu je převážně minimalistický přístup ke konzumaci obsahu.",
     "faqTitle": "Často kladené otázky",
     "q1": {
-      "body": "kami-movie nehostuje žádný obsah. Když kliknete na něco, co chcete sledovat, na internetu se vyhledá vybrané médium (Na obrazovce načítání a na kartě 'zdroje videa' můžete vidět, který zdroj používáte). Média se nikdy nenahrávají movie-webem, vše probíhá prostřednictvím tohoto vyhledávacího mechanismu.",
+      "body": "kami-movie nehostuje žádný obsah. Když kliknete na něco, co chcete sledovat, na internetu se vyhledá vybrané médium (Na obrazovce načítání a na kartě 'zdroje videa' můžete vidět, který zdroj používáte). Média se nikdy nenahrávají kami-movieem, vše probíhá prostřednictvím tohoto vyhledávacího mechanismu.",
       "title": "Kde bereme obsah?"
     },
     "q2": {
-      "body": "Není možné požádat o pořad nebo film, movie-web nespravuje žádný obsah. Veškerý obsah je prohlížen prostřednictvím zdrojů na internetu.",
+      "body": "Není možné požádat o pořad nebo film, kami-movie nespravuje žádný obsah. Veškerý obsah je prohlížen prostřednictvím zdrojů na internetu.",
       "title": "Kde můžu požádat o pořad nebo film?"
     },
     "q3": {
       "body": "Naše výsledky vyhledávání jsou založeny na The Movie Database (TMDB) a zobrazují se bez ohledu na to, zda naše zdroje skutečně obsah mají.",
       "title": "Ve výsledcích vyhledávání se zobrazuje pořad nebo film, proč jej nemůžu přehrát?"
     },
-    "title": "O movie-webu"
+    "title": "O kami-movieu"
   },
   "actions": {
     "copied": "Zkopírováno",
@@ -57,6 +57,8 @@
       },
       "host": "Připojujete se k <0>{{hostname}}</0> - potvrďte, že mu věříte před vytvořením účtu",
       "no": "Zpět",
+      "noHost": "Server nebyl nakonfigurován, tudíž si nemůžete vytvořit účet",
+      "noHostTitle": "Server není nakonfigurován!",
       "title": "Věříte tomuto serveru?",
       "yes": "Věřím tomuto serveru"
     },
@@ -80,7 +82,7 @@
   "footer": {
     "legal": {
       "disclaimer": "Zřeknutí odpovědnosti",
-      "disclaimerText": "movie-web nehostuje žádné soubory, pouze odkazuje na služby třetích stran. Právní záležitosti by měly být řešeny s hostiteli souborů a poskytovateli. movie-web nenese odpovědnost za žádné mediální soubory zobrazené poskytovateli videa."
+      "disclaimerText": "kami-movie nehostuje žádné soubory, pouze odkazuje na služby třetích stran. Právní záležitosti by měly být řešeny s hostiteli souborů a poskytovateli. kami-movie nenese odpovědnost za žádné mediální soubory zobrazené poskytovateli videa."
     },
     "links": {
       "discord": "Discord",
@@ -118,7 +120,12 @@
       "noResults": "Nemohli jsme nic najít!",
       "placeholder": {
         "default": "Co si přejete sledovat?",
-        "extra": []
+        "extra": [
+          "Co chcete objevit?",
+          null,
+          "Jaký je váš oblíbený film?",
+          "Jaký je tvůj oblíbený seriál?"
+        ]
       },
       "sectionTitle": "Výsledky vyhledávání"
     },
@@ -173,9 +180,11 @@
     "extension": {
       "back": "Zpět",
       "explainer": "Pomocí rozšíření prohlížeče můžete získat nejlepší streamy, které nabízíme. S pouhou instalací.",
+      "explainerIos": "Bohužel rozšíření není podporováno na iOS. Stiskněte <bold>Zpět</bold> pro výběr jiné možnosti.",
       "extensionHelp": "Pokud jste rozšíření nainstalovali, ale nebylo zjištěno. <bold>Otevřete rozšíření pomocí nabídky rozšíření ve vašem prohlížeči</bold> a postupujte podle pokynů na obrazovce.",
       "linkChrome": "Instalovat rozšíření pro Chrome",
       "linkFirefox": "Instalovat rozšíření pro Firefox",
+      "notDetectingAction": "Obnovit stránku",
       "status": {
         "disallowed": "Rozšíření není pro tuto stránku povoleno",
         "disallowedAction": "Povolit rozšíření",
@@ -220,7 +229,7 @@
           "title": "Vlastní proxy"
         }
       },
-      "title": "Pojďme vám nastavit movie-web"
+      "title": "Pojďme vám nastavit kami-movie"
     }
   },
   "overlays": {
@@ -236,10 +245,10 @@
     },
     "menus": {
       "downloads": {
-        "disclaimer": "Stahování probíhá přímo u poskytovatele. movie-web nemá kontrolu nad tím, jak jsou stahování poskytovány.",
+        "disclaimer": "Stahování probíhá přímo u poskytovatele. kami-movie nemá kontrolu nad tím, jak jsou stahování poskytovány.",
         "downloadSubtitle": "Stáhnout aktuální titulky",
         "downloadVideo": "Stáhnout video",
-        "hlsDisclaimer": "Stahování probíhá přímo u poskytovatele. movie-web nemá kontrolu nad tím, jak jsou stahování poskytovány.<br /><br />Vezměte prosím na vědomí, že stahujete HLS playlist,<bold> který není doporučen stahovat pokud nejste obeznámeni s pokročilým streamováním médií</bold>. Raději skuste jiný zdroj pro jiný formát.",
+        "hlsDisclaimer": "Stahování probíhá přímo u poskytovatele. kami-movie nemá kontrolu nad tím, jak jsou stahování poskytovány.<br /><br />Vezměte prosím na vědomí, že stahujete HLS playlist,<bold> který není doporučen stahovat pokud nejste obeznámeni s pokročilým streamováním médií</bold>. Raději skuste jiný zdroj pro jiný formát.",
         "onAndroid": {
           "1": "Na Androidu klikněte na tlačítko stahování, poté na nové stránce <bold>klepněte a podržte</bold> na videu a poté vyberte <bold>uložit</bold>.",
           "shortTitle": "Stahování / Android",
@@ -382,7 +391,7 @@
       "shortRemaining": "-{{timeLeft}}"
     },
     "turnstile": {
-      "description": "Ověřte, prosím, že jste člověk, vyplněním Captchy napravo. Toto je pro zajištění bezpečnosti movie-web!",
+      "description": "Ověřte, prosím, že jste člověk, vyplněním Captchy napravo. Toto je pro zajištění bezpečnosti kami-movie!",
       "error": "Nepodařilo se ověřit vaši lidskost. Zkuste to prosím znovu.",
       "title": "Potřebujeme ověřit, zda jste člověk.",
       "verifyingHumanity": "Ověřování vaši lidskosti..."
@@ -390,7 +399,7 @@
   },
   "screens": {
     "dmca": {
-      "text": "Vítejte na DMCA kontaktní stránce movie-webu! Respektujeme práva duševního vlastnictví a chceme rychle řešit jakékoli problémy s autorským právem. Pokud se domníváte, že vaše dílo chráněné autorskými právy bylo na naší platformě neoprávněně použito, zašlete prosím podrobné oznámení DMCA na níže uvedený e-mail. Uveďte prosím popis materiálu chráněného autorským právem, své kontaktní údaje a prohlášení o dobré víře. Jsme odhodláni tyto záležitosti rychle vyřešit a oceňujeme vaši spolupráci při udržování movie-webu jako místa, které respektuje kreativitu a autorská práva.",
+      "text": "Vítejte na DMCA kontaktní stránce kami-movieu! Respektujeme práva duševního vlastnictví a chceme rychle řešit jakékoli problémy s autorským právem. Pokud se domníváte, že vaše dílo chráněné autorskými právy bylo na naší platformě neoprávněně použito, zašlete prosím podrobné oznámení DMCA na níže uvedený e-mail. Uveďte prosím popis materiálu chráněného autorským právem, své kontaktní údaje a prohlášení o dobré víře. Jsme odhodláni tyto záležitosti rychle vyřešit a oceňujeme vaši spolupráci při udržování kami-movieu jako místa, které respektuje kreativitu a autorská práva.",
       "title": "DMCA"
     },
     "loadingApp": "Načítání aplikace",
