--- a/src/assets/locales/es.json
+++ b/src/assets/locales/es.json
@@ -3,18 +3,18 @@
     "description": "kami-movie es una aplicación web que busca transmisiones en internet. El equipo tiene como objetivo un enfoque principalmente minimalista para consumir contenido.",
     "faqTitle": "Preguntas frecuentes",
     "q1": {
-      "body": "kami-movie no aloja ningún contenido. Cuando haces clic en algo para ver, se busca en internet el medio seleccionado (En la pantalla de carga y en la pestaña 'fuentes de vídeo' puedes ver qué fuente estás utilizando). El contenido nunca se carga en movie-web, todo se realiza a través de este mecanismo de búsqueda.",
+      "body": "kami-movie no aloja ningún contenido. Cuando haces clic en algo para ver, se busca en internet el medio seleccionado (En la pantalla de carga y en la pestaña 'fuentes de vídeo' puedes ver qué fuente estás utilizando). El contenido nunca se carga en kami-movie, todo se realiza a través de este mecanismo de búsqueda.",
       "title": "¿De dónde proviene el contenido?"
     },
     "q2": {
-      "body": "No es posible solicitar una serie o película, movie-web no gestiona ningún contenido. Todo el contenido se ve a través de fuentes en internet.",
+      "body": "No es posible solicitar una serie o película, kami-movie no gestiona ningún contenido. Todo el contenido se ve a través de fuentes en internet.",
       "title": "¿Dónde puedo solicitar una serie o película?"
     },
     "q3": {
       "body": "Nuestros resultados de búsqueda están alimentados por The Movie Database (TMDB) y se muestran independientemente de si nuestras fuentes realmente tienen el contenido.",
-      "title": "Los resultados de búsqueda muestran la serie o película, ¿por qué no puedo reproducirla?"
+      "title": "Los resultados de búsqueda muestran la serie o película, ¿Por qué no puedo reproducirla?"
     },
-    "title": "Acerca de movie-web"
+    "title": "Acerca de kami-movie"
   },
   "actions": {
     "copied": "Copiado",
@@ -82,7 +82,7 @@
   "footer": {
     "legal": {
       "disclaimer": "Descargo de responsabilidad",
-      "disclaimerText": "movie-web no aloja ningún archivo, simplemente enlaza a servicios de terceros. Los problemas legales deben ser tratados con los proveedores de archivos y servicios. movie-web no se hace responsable de los archivos multimedia mostrados por los proveedores de vídeo."
+      "disclaimerText": "kami-movie no aloja ningún archivo, simplemente enlaza a servicios de terceros. Los problemas legales deben ser tratados con los proveedores de archivos y servicios. kami-movie no se hace responsable de los archivos multimedia mostrados por los proveedores de vídeo."
     },
     "links": {
       "discord": "Discord",
@@ -138,15 +138,11 @@
       },
       "morning": {
         "default": "¿Qué te gustaría ver esta mañana?",
-        "extra": [
-          "Escuché que “Antes del amanecer” es buena"
-        ]
+        "extra": ["Escuché que “Antes del amanecer” es buena"]
       },
       "night": {
         "default": "¿Qué te gustaría ver esta noche?",
-        "extra": [
-          "¿Cansado? Escuché que “El Exorcista” es buena."
-        ]
+        "extra": ["¿Cansado? Escuché que “El Exorcista” es buena."]
       }
     }
   },
@@ -181,7 +177,7 @@
       "cancel": "Cancelar",
       "confirm": "Usar configuración por defecto",
       "description": "La configuración predeterminada no tiene las mejores transmisiones y puede ser insoportablemente lenta.",
-      "title": "Estás seguro?"
+      "title": "¿Estás seguro?"
     },
     "extension": {
       "back": "Volver atrás",
@@ -236,7 +232,7 @@
           "title": "Proxy personalizado"
         }
       },
-      "title": "Vamos a configurar movie-web"
+      "title": "Vamos a configurar kami-movie"
     }
   },
   "overlays": {
@@ -253,10 +249,10 @@
     "menus": {
       "downloads": {
         "copyHlsPlaylist": "Copiar enlace de reproducción HLS",
-        "disclaimer": "Las descargas se realizan directamente desde el proveedor. movie-web no tiene control sobre cómo se proporcionan las descargas.",
+        "disclaimer": "Las descargas se realizan directamente desde el proveedor. kami-movie no tiene control sobre cómo se proporcionan las descargas.",
         "downloadSubtitle": "Descargar subtítulo actual",
         "downloadVideo": "Descargar vídeo",
-        "hlsDisclaimer": "Las descargas se realizan directamente del proveedor. movie-web no tiene control sobre cómo se proporcionan las descargas. <br /><br />Tenga en cuenta que está descargando una lista de reproducción HLS, <bold>dirigida a usuarios familiarizados con la transmisión multimedia avanzada.</bold> Prueba con diferentes fuentes para diferentes formatos.",
+        "hlsDisclaimer": "Las descargas se realizan directamente del proveedor. kami-movie no tiene control sobre cómo se proporcionan las descargas. <br /><br />Tenga en cuenta que está descargando una lista de reproducción HLS, <bold>dirigida a usuarios familiarizados con la transmisión multimedia avanzada.</bold> Prueba con diferentes fuentes para diferentes formatos.",
         "onAndroid": {
           "1": "Para descargar en Android, haz clic en el botón de descarga y luego, en la nueva página, <bold>mantén presionado</bold> el vídeo y selecciona <bold>guardar</bold>.",
           "shortTitle": "Descargar / Android",
@@ -399,7 +395,7 @@
       "shortRemaining": "-{{timeLeft}}"
     },
     "turnstile": {
-      "description": "Por favor, confirma que eres humano completando el Captcha. Esto es para mantener movie-web seguro!",
+      "description": "Por favor, confirma que eres humano completando el Captcha. ¡Esto es para mantener kami-movie seguro!",
       "error": "Ha habido un error al verificar tu humanidad. Por favor, prueba de nuevo.",
       "title": "Necesitamos verificar que eres humano.",
       "verifyingHumanity": "Verificando tu hunanidad…"
@@ -407,7 +403,7 @@
   },
   "screens": {
     "dmca": {
-      "text": "¡Bienvenido a la página de contacto DMCA de movie-web! Respetamos los derechos de propiedad intelectual y queremos abordar cualquier problema de derechos de autor de manera rápida. Si cree que su trabajo con derechos de autor se ha utilizado incorrectamente en nuestra plataforma, envíe un aviso DMCA detallado al correo electrónico que se muestra a continuación. Incluya una descripción del material con derechos de autor, sus datos de contacto y una declaración de buena fe. Estamos comprometidos a resolver estos asuntos de manera pronta y agradecemos su cooperación para mantener a movie-web como un lugar que respeta la creatividad y los derechos de autor.",
+      "text": "¡Bienvenido a la página de contacto DMCA de kami-movie! Respetamos los derechos de propiedad intelectual y queremos abordar cualquier problema de derechos de autor de manera rápida. Si cree que su trabajo con derechos de autor se ha utilizado incorrectamente en nuestra plataforma, envíe un aviso DMCA detallado al correo electrónico que se muestra a continuación. Incluya una descripción del material con derechos de autor, sus datos de contacto y una declaración de buena fe. Estamos comprometidos a resolver estos asuntos de manera pronta y agradecemos su cooperación para mantener a kami-movie como un lugar que respeta la creatividad y los derechos de autor.",
       "title": "DMCA"
     },
     "loadingApp": "Cargando la aplicación",
@@ -494,7 +490,7 @@
         "redoSetup": "Rehacer configuración",
         "successStatus": {
           "description": "Todo lo necesario está en su sitio para que empieces a ver tu contenido favorito.",
-          "title": "Todo está configurado!"
+          "title": "¡Todo está configurado!"
         },
         "unsetStatus": {
           "description": "Haga clic en el botón a la derecha para iniciar el proceso de configuración.",
