--- a/src/assets/locales/fa.json
+++ b/src/assets/locales/fa.json
@@ -138,15 +138,11 @@
       },
       "morning": {
         "default": "دوست دارید امروز صبح چه چیزی تماشا کنید؟",
-        "extra": [
-          "شنیدم فیلم \"پیش از طلوع\" عالیه"
-        ]
+        "extra": ["شنیدم فیلم \"پیش از طلوع\" عالیه"]
       },
       "night": {
         "default": "دوست دارید امشب چه چیزی تماشا کنید؟",
-        "extra": [
-          "خسته اید؟ شنیده ام که \"جن گیر\" فیلم خوبی است."
-        ]
+        "extra": ["خسته اید؟ شنیده ام که \"جن گیر\" فیلم خوبی است."]
       }
     }
   },
@@ -256,7 +252,7 @@
         "disclaimer": "دانلود ها به طور مستقیم از ارائه دهنده گرفته می شوند. مووی-وب کنترلی بر نحوه ارائه دانلود ها ندارد.",
         "downloadSubtitle": "دانلود زیرنویس فعلی",
         "downloadVideo": "دانلود ویدیو",
-        "hlsDisclaimer": "دانلودها مستقیماً از ارائه دهنده گرفته می شوند. movie-web کنترلی بر نحوه ارائه دانلودها ندارد.<br /><br />لطفاً توجه داشته باشید که در حال دانلود یک لیست پخش HLS هستید، <bold>اگر با فرمت های پخش جریانی پیشرفته آشنایی ندارید، دانلود آن توصیه نمی شود. </bold>. منابع مختلف را برای فرمت های مختلف امتحان کنید.",
+        "hlsDisclaimer": "دانلودها مستقیماً از ارائه دهنده گرفته می شوند. kami-movie کنترلی بر نحوه ارائه دانلودها ندارد.<br /><br />لطفاً توجه داشته باشید که در حال دانلود یک لیست پخش HLS هستید، <bold>اگر با فرمت های پخش جریانی پیشرفته آشنایی ندارید، دانلود آن توصیه نمی شود. </bold>. منابع مختلف را برای فرمت های مختلف امتحان کنید.",
         "onAndroid": {
           "1": "برای دانلود در اندروید، روی دکمه دانلود کلیک کنید و سپس در صفحه جدید، روی ویدیو <bold>ضربه بزنید و نگه دارید</bold>، سپس <bold>ذخیره</bold> را انتخاب کنید.",
           "shortTitle": "دانلود / اندروید",
@@ -536,6 +532,7 @@
       }
     },
     "subtitles": {
+      "backgroundBlurLabel": "تاری پس زمینه",
       "backgroundLabel": "شفافیت پس‌زمینه",
       "colorLabel": "رنگ",
       "previewQuote": "نباید بترسم، ترس قاتل ذهن است.",
