--- a/src/assets/locales/fr.json
+++ b/src/assets/locales/fr.json
@@ -3,18 +3,18 @@
     "description": "kami-movie est une application web qui recherche des flux sur Internet. L'équipe vise une approche minimaliste de la consommation de contenu.",
     "faqTitle": "Questions fréquentes",
     "q1": {
-      "body": "kami-movie n'héberge aucun contenu. Lorsque vous cliquez sur un élément à regarder, une recherche est effectuée sur Internet pour trouver le média sélectionné (sur l'écran de chargement et dans l'onglet \"sources vidéo\", vous pouvez voir quelle source vous utilisez). Les médias ne sont jamais téléchargés par movie-web, tout passe par ce mécanisme de recherche.",
+      "body": "kami-movie n'héberge aucun contenu. Lorsque vous cliquez sur un élément à regarder, une recherche est effectuée sur Internet pour trouver le média sélectionné (sur l'écran de chargement et dans l'onglet \"sources vidéo\", vous pouvez voir quelle source vous utilisez). Les médias ne sont jamais téléchargés par kami-movie, tout passe par ce mécanisme de recherche.",
       "title": "D'où vient le contenu ?"
     },
     "q2": {
-      "body": "Il est impossible de demander un film ou une série car movie-web ne gère aucun contenu. Le contenu est récupéré en explorant d'autres sites sur Internet.",
+      "body": "Il est impossible de demander un film ou une série car kami-movie ne gère aucun contenu. Le contenu est récupéré en explorant d'autres sites sur Internet.",
       "title": "Où puis-je demander une série ou un film ?"
     },
     "q3": {
       "body": "Nos résultats de recherche sont alimentés par The Movie Database (TMDB) et s'affichent indépendamment de la disponibilité réelle du contenu dans nos sources.",
       "title": "Les résultats de la recherche affichent la série ou le film, pourquoi ne puis-je pas le lire ?"
     },
-    "title": "À propos de movie-web"
+    "title": "À propos de kami-movie"
   },
   "actions": {
     "copied": "Copié",
@@ -57,6 +57,8 @@
       },
       "host": "Vous êtes en train de vous connecter à <0>{{hostname}}</0> - veuillez confirmer que vous lui faites confiance avant de créer un compte",
       "no": "Retour",
+      "noHost": "Le serveur n'a pas été configuré, vous ne pouvez donc pas créer de compte",
+      "noHostTitle": "Serveur non configuré !",
       "title": "Avez-vous confiance en ce serveur ?",
       "yes": "Je fais confiance à ce serveur"
     },
@@ -80,7 +82,7 @@
   "footer": {
     "legal": {
       "disclaimer": "Avertissement",
-      "disclaimerText": "Le site movie-web ne stocke pas de fichiers, mais propose des liens vers des services externes. Les problèmes juridiques doivent être traités avec les fournisseurs et les hébergeurs de fichiers. Les fichiers multimédias diffusés par les fournisseurs de vidéos ne sont pas couverts par movie-web."
+      "disclaimerText": "Le site kami-movie ne stocke pas de fichiers, mais propose des liens vers des services externes. Les problèmes juridiques doivent être traités avec les fournisseurs et les hébergeurs de fichiers. Les fichiers multimédias diffusés par les fournisseurs de vidéos ne sont pas couverts par kami-movie."
     },
     "links": {
       "discord": "Discord",
@@ -117,7 +119,13 @@
       "loading": "Chargement...",
       "noResults": "Nous n'avons rien trouvé !",
       "placeholder": {
-        "default": "Que voulez-vous voir ?"
+        "default": "Que voulez-vous voir ?",
+        "extra": [
+          "Que voulez-vous explorer ?",
+          "Que y a-t-il dans votre liste de lecture?",
+          "Quel est votre film préféré ?",
+          "Quelle est votre série préférée ?"
+        ]
       },
       "sectionTitle": "Résultats de la recherche"
     },
@@ -130,9 +138,7 @@
       },
       "morning": {
         "default": "Que voulez-vous regarder ce matin ?",
-        "extra": [
-          "Les films, c'est comme les voyages : ça nous ouvre l'esprit"
-        ]
+        "extra": ["Les films, c'est comme les voyages : ça nous ouvre l'esprit"]
       },
       "night": {
         "default": "Que voulez-vous regarder ce soir ?",
@@ -228,7 +234,7 @@
           "title": "Proxy personnalisé"
         }
       },
-      "title": "Commençons par configurer movie-web"
+      "title": "Commençons par configurer kami-movie"
     }
   },
   "overlays": {
@@ -245,10 +251,10 @@
     "menus": {
       "downloads": {
         "copyHlsPlaylist": "Copier le lien de la playlist HLS",
-        "disclaimer": "Les téléchargements sont effectués directement par le fournisseur. movie-web n'a aucun contrôle sur la manière dont les téléchargements sont effectués.",
+        "disclaimer": "Les téléchargements sont effectués directement par le fournisseur. kami-movie n'a aucun contrôle sur la manière dont les téléchargements sont effectués.",
         "downloadSubtitle": "Télécharger les sous-titres",
         "downloadVideo": "Télécharger la vidéo",
-        "hlsDisclaimer": "Les téléchargements sont effectués directement auprès du fournisseur. movie-web n'a aucun contrôle sur la façon dont les téléchargements sont fournis.<br /><br />Veuillez noter que vous téléchargez une liste de lecture HLS, <bold>il n'est pas recommandé de la télécharger si vous n'êtes pas familier avec les formats de streaming avancés. </bold>. Essayez différentes sources pour différents formats.",
+        "hlsDisclaimer": "Les téléchargements sont effectués directement auprès du fournisseur. kami-movie n'a aucun contrôle sur la façon dont les téléchargements sont fournis.<br /><br />Veuillez noter que vous téléchargez une liste de lecture HLS, <bold>il n'est pas recommandé de la télécharger si vous n'êtes pas familier avec les formats de streaming avancés. </bold>. Essayez différentes sources pour différents formats.",
         "onAndroid": {
           "1": "Pour télécharger sur Android, cliquez sur le bouton de téléchargement puis, sur la nouvelle page, <bold>tapez et maintenez </bold> sur la vidéo, puis sélectionnez <bold>enregistrer</bold>.",
           "shortTitle": "Télécharger / Android",
@@ -391,7 +397,7 @@
       "shortRemaining": "-{{timeLeft}}"
     },
     "turnstile": {
-      "description": "Veuillez vérifier que vous êtes bien humain en complétant le Captcha à droite. C'est pour assurer la sécurité de movie-web !",
+      "description": "Veuillez vérifier que vous êtes bien humain en complétant le Captcha à droite. C'est pour assurer la sécurité de kami-movie !",
       "error": "Échec de la vérification de votre humanité. Veuillez réessayer.",
       "title": "Nous devons vérifier que vous êtes un humain.",
       "verifyingHumanity": "Vérification de votre humanité..."
@@ -399,7 +405,7 @@
   },
   "screens": {
     "dmca": {
-      "text": "Bienvenue sur la page de contact DMCA de movie-web ! Nous respectons les droits de propriété intellectuelle et souhaitons répondre rapidement à toute question relative aux droits d'auteur. Si vous pensez que votre œuvre protégée par des droits d'auteur a été utilisée de manière inappropriée sur notre plateforme, veuillez envoyer une notification DMCA détaillée à l'adresse électronique ci-dessous. Veuillez inclure une description du matériel protégé par des droits d'auteur, vos coordonnées et une déclaration de bonne foi. Nous nous engageons à résoudre ces problèmes rapidement et vous remercions de votre coopération pour que movie-web reste un lieu respectueux de la créativité et des droits d'auteur.",
+      "text": "Bienvenue sur la page de contact DMCA de kami-movie ! Nous respectons les droits de propriété intellectuelle et souhaitons répondre rapidement à toute question relative aux droits d'auteur. Si vous pensez que votre œuvre protégée par des droits d'auteur a été utilisée de manière inappropriée sur notre plateforme, veuillez envoyer une notification DMCA détaillée à l'adresse électronique ci-dessous. Veuillez inclure une description du matériel protégé par des droits d'auteur, vos coordonnées et une déclaration de bonne foi. Nous nous engageons à résoudre ces problèmes rapidement et vous remercions de votre coopération pour que kami-movie reste un lieu respectueux de la créativité et des droits d'auteur.",
       "title": "DMCA"
     },
     "loadingApp": "Chargement de l'application",
@@ -528,6 +534,7 @@
       }
     },
     "subtitles": {
+      "backgroundBlurLabel": "Flou d'arrière-plan",
       "backgroundLabel": "Opacité du fond",
       "colorLabel": "Couleur",
       "previewQuote": "Plus l'obscurité est profonde, plus la lumière brille.",
