--- a/src/assets/locales/ja.json
+++ b/src/assets/locales/ja.json
@@ -3,18 +3,18 @@
     "description": "kami-movieは、ウェブアプリケーションで、インターネットを検索してストリームを見つけます。チームは、コンテンツの消費において主にミニマリストなアプローチを目指しています。",
     "faqTitle": "よくある質問",
     "q1": {
-      "body": "kami-movieはいかなるコンテンツもホストしていません。視聴するために何かをクリックすると、選択したメディアがインターネットで検索されます（ローディング画面と「ビデオソース」タブでは、使用しているソースが表示されます）。メディアは決してmovie-webにアップロードされず、すべてがこの検索メカニズムを通じて行われます。",
+      "body": "kami-movieはいかなるコンテンツもホストしていません。視聴するために何かをクリックすると、選択したメディアがインターネットで検索されます（ローディング画面と「ビデオソース」タブでは、使用しているソースが表示されます）。メディアは決してkami-movieにアップロードされず、すべてがこの検索メカニズムを通じて行われます。",
       "title": "コンテンツはどこから来ていますか？"
     },
     "q2": {
-      "body": "ショーまたは映画のリクエストはできません。movie-webはどのコンテンツも管理していません。すべてのコンテンツはインターネット上のソースを通じて閲覧されます。",
+      "body": "ショーまたは映画のリクエストはできません。kami-movieはどのコンテンツも管理していません。すべてのコンテンツはインターネット上のソースを通じて閲覧されます。",
       "title": "ショーまたは映画のリクエストはどこでできますか？"
     },
     "q3": {
       "body": "私たちの検索結果は、The Movie Database（TMDB）によって提供され、実際にはコンテンツを持っているかどうかに関係なく表示されます。",
       "title": "検索結果には番組や映画が表示されますが、なぜ再生できないのでしょうか？"
     },
-    "title": "movie-webについて"
+    "title": "kami-movieについて"
   },
   "actions": {
     "copied": "コピーしました",
