--- a/src/assets/locales/ko.json
+++ b/src/assets/locales/ko.json
@@ -7,14 +7,14 @@
       "title": "콘텐츠의 출처는 어디인가요?"
     },
     "q2": {
-      "body": "프로그램이나 영화를 요청할 수 없으며, movie-web은 어떠한 콘텐츠도 관리하지 않습니다. 모든 콘텐츠는 인터넷의 소스를 통해 볼 수 있습니다.",
+      "body": "프로그램이나 영화를 요청할 수 없으며, kami-movie은 어떠한 콘텐츠도 관리하지 않습니다. 모든 콘텐츠는 인터넷의 소스를 통해 볼 수 있습니다.",
       "title": "프로그램이나 영화는 어디에서 요청할 수 있나요?"
     },
     "q3": {
       "body": "검색 결과는 영화 데이터베이스(TMDB)를 기반으로 하며, 출처에 실제 콘텐츠가 있는지 여부와 관계없이 표시됩니다.",
       "title": "검색 결과에 프로그램이나 영화가 표시되는데 왜 재생할 수 없나요?"
     },
-    "title": "movie-web에 대하여"
+    "title": "kami-movie에 대하여"
   },
   "actions": {
     "copied": "복사되었습니다",
@@ -57,6 +57,8 @@
       },
       "host": "<0>{{hostname}}</0>에 연결 중입니다 - 계정을 만들기 전에 신뢰하는지 확인해 주세요",
       "no": "뒤로 가기",
+      "noHost": "서버가 구성되어 있지 않기 때문에 계정을 만들 수 없습니다",
+      "noHostTitle": "서버가 구성되지 않았습니다!",
       "title": "이 서버를 신뢰하십니까?",
       "yes": "네, 신뢰합니다"
     },
@@ -80,7 +82,7 @@
   "footer": {
     "legal": {
       "disclaimer": "면책 조항",
-      "disclaimerText": "movie-web은 어떠한 파일도 호스팅하지 않으며, 제3자 서비스에 대한 링크만 제공합니다. 법적 문제는 파일 호스트 및 제공업체와 해결해야 합니다. 동영상 제공업체가 표시하는 미디어 파일에 대해 movie-web은 책임을 지지 않습니다."
+      "disclaimerText": "kami-movie은 어떠한 파일도 호스팅하지 않으며, 제3자 서비스에 대한 링크만 제공합니다. 법적 문제는 파일 호스트 및 제공업체와 해결해야 합니다. 동영상 제공업체가 표시하는 미디어 파일에 대해 kami-movie은 책임을 지지 않습니다."
     },
     "links": {
       "discord": "디스코드",
@@ -118,7 +120,12 @@
       "noResults": "검색결과가 없습니다!",
       "placeholder": {
         "default": "무엇을 보고 싶으신가요?",
-        "extra": []
+        "extra": [
+          "무엇을 탐험하고 싶으신가요?",
+          null,
+          "당신이 가장 좋아하는 영화는?",
+          "당신이 가장 좋아하는 시리즈는?"
+        ]
       },
       "sectionTitle": "검색 결과"
     },
@@ -225,7 +232,7 @@
           "title": "커스텀 프록시"
         }
       },
-      "title": "movie-web의 설정을 진행해 봅시다"
+      "title": "kami-movie의 설정을 진행해 봅시다"
     }
   },
   "overlays": {
@@ -241,10 +248,11 @@
     },
     "menus": {
       "downloads": {
-        "disclaimer": "다운로드는 제공업체에서 직접 가져옵니다. movie-web은 다운로드 제공 방식을 통제할 수 없습니다.",
+        "copyHlsPlaylist": "HLS 플레이리스트 링크 복사하기",
+        "disclaimer": "다운로드는 제공업체에서 직접 가져옵니다. kami-movie은 다운로드 제공 방식을 통제할 수 없습니다.",
         "downloadSubtitle": "현재 자막 다운로드",
         "downloadVideo": "영상 다운로드",
-        "hlsDisclaimer": "다운로드는 제공업체에서 직접 가져옵니다. movie-web은 다운로드 제공 방식을 통제할 수 없습니다.<br /><br />사용자께서는 HLS 플레이리스트를 다운로드 하고 있으며, <bold>이는 고급 스트리밍 포맷의 사용에 익숙하지 않은 사용자에게는 추천하지 않는다는 것을 유의해주세요<bold>. 혹은 다른 소스와 포맷을 이용하여 보세요.",
+        "hlsDisclaimer": "다운로드는 제공업체에서 직접 가져옵니다. kami-movie은 다운로드 제공 방식을 통제할 수 없습니다.<br /><br />사용자께서는 HLS 플레이리스트를 다운로드 하고 있으며, <bold>이는 고급 스트리밍 포맷의 사용에 익숙하지 않은 사용자에게는 추천하지 않는다는 것을 유의해주세요<bold>. 혹은 다른 소스와 포맷을 이용하여 보세요.",
         "onAndroid": {
           "1": "Android에서 다운로드하려면 다운로드 버튼을 클릭한 다음 새 페이지에서 동영상을 <bold>길게 눌러</bold>저장을 선택합니다.",
           "shortTitle": "다운로드 / Android",
@@ -395,7 +403,7 @@
   },
   "screens": {
     "dmca": {
-      "text": "movie-web의 DMCA 문의 페이지에 오신 것을 환영합니다! 당사는 지적 재산권을 존중하며 저작권 관련 문제를 신속하게 해결하고자 합니다. 귀하의 저작권이 있는 저작물이 당사 플랫폼에서 부적절하게 사용되었다고 생각되는 경우, 아래 이메일로 자세한 DMCA 통지를 보내주시기 바랍니다. 저작권이 있는 자료에 대한 설명, 연락처 정보, 선의의 신념을 담은 진술서를 포함하시기 바랍니다. 당사는 이러한 문제를 신속하게 해결하기 위해 최선을 다하고 있으며, movie-web을 창의성과 저작권을 존중하는 공간으로 유지하는 데 협조해 주셔서 감사합니다.",
+      "text": "kami-movie의 DMCA 문의 페이지에 오신 것을 환영합니다! 당사는 지적 재산권을 존중하며 저작권 관련 문제를 신속하게 해결하고자 합니다. 귀하의 저작권이 있는 저작물이 당사 플랫폼에서 부적절하게 사용되었다고 생각되는 경우, 아래 이메일로 자세한 DMCA 통지를 보내주시기 바랍니다. 저작권이 있는 자료에 대한 설명, 연락처 정보, 선의의 신념을 담은 진술서를 포함하시기 바랍니다. 당사는 이러한 문제를 신속하게 해결하기 위해 최선을 다하고 있으며, kami-movie을 창의성과 저작권을 존중하는 공간으로 유지하는 데 협조해 주셔서 감사합니다.",
       "title": "DMCA"
     },
     "loadingApp": "애플리케이션 로딩 중",
