--- a/src/assets/locales/pl.json
+++ b/src/assets/locales/pl.json
@@ -3,18 +3,18 @@
     "description": "kami-movie jest aplikacją internetową, która wyszukuje w internecie strumienia. Zespół dąży do minimalistycznego podejścia do konsumpcji treści.",
     "faqTitle": "Częste pytania",
     "q1": {
-      "body": "kami-movie nie udostępnia żadnych treści. Kiedy klikniesz na coś co chcesz obejrzeć, internet zostanie przeszukany pod kątem wybranych multimediów (na ekranie ładowania oraz w zakładce „źródła wideo” możesz zobaczyć, z jakiego źródła korzystasz). Media nigdy nie są przesyłane przez movie-web, wszystko odbywa się za pośrednictwem tego mechanizmu wyszukiwania.",
+      "body": "kami-movie nie udostępnia żadnych treści. Kiedy klikniesz na coś co chcesz obejrzeć, internet zostanie przeszukany pod kątem wybranych multimediów (na ekranie ładowania oraz w zakładce „źródła wideo” możesz zobaczyć, z jakiego źródła korzystasz). Media nigdy nie są przesyłane przez kami-movie, wszystko odbywa się za pośrednictwem tego mechanizmu wyszukiwania.",
       "title": "Skąd pochodzą treści?"
     },
     "q2": {
-      "body": "Nie można złożyć wniosku o serialu ani filmu, movie-web nie zarządza żadną treścią. Wszystkie treści są przeglądane za pośrednictwem źródeł w Internecie.",
+      "body": "Nie można złożyć wniosku o serialu ani filmu, kami-movie nie zarządza żadną treścią. Wszystkie treści są przeglądane za pośrednictwem źródeł w Internecie.",
       "title": "Gdzie mogę złożyć wniosek o seriale lub filmie?"
     },
     "q3": {
       "body": "Nasze wyniki wyszukiwania pochodzą z TMDB i są wyświetlane niezależnie od tego, czy nasze źródła faktycznie posiadają daną treść.",
       "title": "W wyniku wyszukiwania wyświetlany jest serial lub film. Dlaczego nie mogę go odtworzyć?"
     },
-    "title": "O movie-web"
+    "title": "O kami-movie"
   },
   "actions": {
     "copied": "Skopiowano",
@@ -80,7 +80,7 @@
   "footer": {
     "legal": {
       "disclaimer": "Zastrzeżenie",
-      "disclaimerText": "movie-web nie przechowuje żadnych plików, zawiera jedynie łącza do usług stron trzecich. Kwestie prawne należy konsultować z hostami plików i dostawcami. movie-web nie ponosi odpowiedzialności za jakiekolwiek pliki multimedialne prezentowane przez dostawców wideo."
+      "disclaimerText": "kami-movie nie przechowuje żadnych plików, zawiera jedynie łącza do usług stron trzecich. Kwestie prawne należy konsultować z hostami plików i dostawcami. kami-movie nie ponosi odpowiedzialności za jakiekolwiek pliki multimedialne prezentowane przez dostawców wideo."
     },
     "links": {
       "discord": "Discord",
@@ -117,8 +117,7 @@
       "loading": "Wczytywanie...",
       "noResults": "Nie mogliśmy niczego znaleźć!",
       "placeholder": {
-        "default": "Co chciałbyś obejrzeć?",
-        "extra": []
+        "default": "Co chciałbyś obejrzeć?"
       },
       "sectionTitle": "Wyniki wyszukiwania"
     },
@@ -176,7 +175,7 @@
       "back": "Wstecz",
       "explainer": "Korzystając z rozszerzenia przeglądarki, możesz uzyskać najlepsze strumienie. Wystarczy prosta instalacja.",
       "explainerIos": "Niestety, rozszerzenie przeglądarki nie jest obsługiwane w systemie iOS, naciśnij <bold>Wstecz</bold>, aby wybrać inną opcję.",
-      "extensionHelp": "Jeżeli zainstalowałeś rozszerzenie, ale nie zostało ono wykryte. <bold>Otwórz rozszerzenie za pomocą menu rozszerzeń przeglądarki</bold> i postępuj zgodnie z instrukcjami wyświetlanymi na ekranie.",
+      "extensionHelp": "Jeżeli zainstalowałeś rozszerzenie, ale nie zostało ono wykryte, <bold>otwórz rozszerzenie za pomocą menu rozszerzeń przeglądarki</bold> i postępuj zgodnie z instrukcjami wyświetlanymi na ekranie.",
       "linkChrome": "Zainstaluj rozszerzenie na Chrome",
       "linkFirefox": "Zainstaluj rozszerzenie na Firefox",
       "notDetecting": "Zainstalowano na Chrome, ale się nie wyświetla? Spróbuj odświeżyć stronę!",
@@ -207,7 +206,7 @@
       "title": "Stwórzmy nowe proxy"
     },
     "start": {
-      "explainer": "Aby uzyskać najlepsze transmisje strumieniowe. Będziesz musiał wybrać metodę strumieniowania, której chcesz użyć.",
+      "explainer": "Aby uzyskać najlepsze transmisje strumieniowe, będziesz musiał wybrać metodę strumieniowania której chcesz użyć.",
       "options": {
         "default": {
           "text": "Nie chcę dobrej jakości strumieni, <0 /> <1>użyj domyślnej konfiguracji</1>"
@@ -225,7 +224,7 @@
           "title": "Niestandardowy serwer proxy"
         }
       },
-      "title": "Przejdźmy do konfiguracji z movie-web"
+      "title": "Przejdźmy do konfiguracji z kami-movie"
     }
   },
   "overlays": {
@@ -241,10 +240,10 @@
     },
     "menus": {
       "downloads": {
-        "disclaimer": "Pliki do pobrania są pobierane bezpośrednio od dostawcy. movie-web nie ma kontroli nad sposobem dostarczania plików do pobrania.",
+        "disclaimer": "Pliki do pobrania są pobierane bezpośrednio od dostawcy. kami-movie nie ma kontroli nad sposobem dostarczania plików do pobrania.",
         "downloadSubtitle": "Pobierz aktualne napisy",
         "downloadVideo": "Pobierz wideo",
-        "hlsDisclaimer": "Pliki do pobrania są pobierane bezpośrednio od dostawcy. movie-web nie ma kontroli nad sposobem dostarczania plików do pobrania.<br /><br />Należy pamiętać, że pobierasz playlistę HLS, <bold>nie zaleca się pobierania, jeśli nie jesteś zaznajomiony z zaawansowanymi formatami przesyłania strumieniowego</bold>. Wypróbuj różne źródła dla innych formatów.",
+        "hlsDisclaimer": "Pliki do pobrania są pobierane bezpośrednio od dostawcy. kami-movie nie ma kontroli nad sposobem dostarczania plików do pobrania.<br /><br />Należy pamiętać, że pobierasz playlistę HLS, <bold>nie zaleca się pobierania, jeśli nie jesteś zaznajomiony z zaawansowanymi formatami przesyłania strumieniowego</bold>. Wypróbuj różne źródła dla innych formatów.",
         "onAndroid": {
           "1": "Aby pobrać na Androidzie, kliknij przycisk pobierania, a następnie na nowej stronie <bold>dotknij i przytrzymaj</bold> na filmie, a następnie wybierz <bold>zapisz</bold>.",
           "shortTitle": "Pobierz / Android",
@@ -387,7 +386,7 @@
       "shortRemaining": "-{{timeLeft}}"
     },
     "turnstile": {
-      "description": "Proszę potwierdź że jesteś człowiekiem, wypełniając Captcha po prawej stronie. Ma to zapewnić bezpieczeństwo movie-web!",
+      "description": "Proszę potwierdź że jesteś człowiekiem, wypełniając Captcha po prawej stronie. Ma to zapewnić bezpieczeństwo kami-movie!",
       "error": "Nie udało się zweryfikować Twojego człowieczeństwa. Proszę spróbuj ponownie.",
       "title": "Musimy sprawdzić, czy jesteś człowiekiem.",
       "verifyingHumanity": "Sprawdzasz swoje człowieczeństwo..."
@@ -395,7 +394,7 @@
   },
   "screens": {
     "dmca": {
-      "text": "Witamy na stronie kontaktowej DMCA serwisu movie-web! Szanujemy prawa własności intelektualnej i chcemy szybko rozwiązywać wszelkie problemy związane z prawami autorskimi. Jeśli uważasz że twoja praca chroniona prawem autorskim została niewłaściwie wykorzystana na naszej platformie, proszę wysłać szczegółowe powiadomienie DMCA na poniższy adres e-mail. Prosimy o dołączenie opisu materiału chronionego prawem autorskim, danych kontaktowych i oświadczenia w dobrej wierze. Zależy nam na szybkim rozwiązywaniu takich spraw i będziemy wdzięczni za współpracę w utrzymaniu movie-web jako miejsce w którym szanuje się kreatywność i prawa autorskie.",
+      "text": "Witamy na stronie kontaktowej DMCA serwisu kami-movie! Szanujemy prawa własności intelektualnej i chcemy szybko rozwiązywać wszelkie problemy związane z prawami autorskimi. Jeśli uważasz że twoja praca chroniona prawem autorskim została niewłaściwie wykorzystana na naszej platformie, proszę wysłać szczegółowe powiadomienie DMCA na poniższy adres e-mail. Prosimy o dołączenie opisu materiału chronionego prawem autorskim, danych kontaktowych i oświadczenia w dobrej wierze. Zależy nam na szybkim rozwiązywaniu takich spraw i będziemy wdzięczni za współpracę w utrzymaniu kami-movie jako miejsce w którym szanuje się kreatywność i prawa autorskie.",
       "title": "DMCA"
     },
     "loadingApp": "Wczytywanie aplikacji",
@@ -524,6 +523,7 @@
       }
     },
     "subtitles": {
+      "backgroundBlurLabel": "Rozmycie tła",
       "backgroundLabel": "Krycie tła",
       "colorLabel": "Kolor",
       "previewQuote": "Nie wolno mi się bać. Strach zabija myślenie.",
