--- a/src/assets/locales/ru.json
+++ b/src/assets/locales/ru.json
@@ -3,18 +3,18 @@
     "description": "kami-movie — это веб-приложение, которое ищет в интернете видеопотоки. Наша команда стремится к минималистичному подходу к просмотру контента.",
     "faqTitle": "Частые вопросы",
     "q1": {
-      "body": "kami-movie не размещает у себя никакой контент. Когда вы выбираете что-то посмотреть, в интернете происходит поиск выбранного медиафайла (на экране загрузки и во вкладке \"Источники для видео\" вы можете увидеть, какой источник вы используете). Медиафайлы никогда не загружаются на movie-web, все происходит через этот механизм поиска.",
+      "body": "kami-movie не размещает у себя никакой контент. Когда вы выбираете что-то посмотреть, в интернете происходит поиск выбранного медиафайла (на экране загрузки и во вкладке \"Источники для видео\" вы можете увидеть, какой источник вы используете). Медиафайлы никогда не загружаются на kami-movie, все происходит через этот механизм поиска.",
       "title": "Откуда же берётся контент?"
     },
     "q2": {
-      "body": "Невозможно запросить сериал или фильм, movie-web не распоряжается никаким контентом. Весь контент доступен через источники в интернете.",
+      "body": "Невозможно запросить сериал или фильм, kami-movie не распоряжается никаким контентом. Весь контент доступен через источники в интернете.",
       "title": "Где я могу запросить телепередачу или фильм?"
     },
     "q3": {
       "body": "Наши результаты поиска основаны на базе данных The Movie Database (TMDB) и отображаются вне зависимости от того, есть ли в наших источниках соответствующий контент.",
       "title": "В результатах поиска отображается телепередача или фильм, но почему я не могу воспроизвести их?"
     },
-    "title": "О сайте movie-web"
+    "title": "О сайте kami-movie"
   },
   "actions": {
     "copied": "Скопировано",
@@ -57,6 +57,8 @@
       },
       "host": "Вы подключаетесь к <0>{{hostname}}</0> - пожалуйста, подтвердите, что вы доверяете ему, прежде чем создавать учётную запись",
       "no": "Вернуться назад",
+      "noHost": "Сервер не был настроен, поэтому вы не можете создать учётную запись",
+      "noHostTitle": "Сервер не настроен!",
       "title": "Вы доверяете этому серверу?",
       "yes": "Я доверяю этому серверу"
     },
@@ -80,7 +82,7 @@
   "footer": {
     "legal": {
       "disclaimer": "Отказ от ответственности",
-      "disclaimerText": "movie-web не размещает никакие файлы, а только ссылки на сторонние источники. Юридические вопросы следует решать с хостерами и поставщиками файлов. movie-web не несет ответственности за любые медиафайлы, предоставленные поставщиками медиафайлов."
+      "disclaimerText": "kami-movie не размещает никакие файлы, а только ссылки на сторонние источники. Юридические вопросы следует решать с хостерами и поставщиками файлов. kami-movie не несет ответственности за любые медиафайлы, предоставленные поставщиками медиафайлов."
     },
     "links": {
       "discord": "Discord",
@@ -118,7 +120,12 @@
       "noResults": "Мы ничего не нашли!",
       "placeholder": {
         "default": "Что вы хотите посмотреть?",
-        "extra": []
+        "extra": [
+          "Что вы хотите исследовать?",
+          "Что в вашем списке?",
+          "Какой ваш любимый фильм?",
+          "Какой ваш любимый сериал?"
+        ]
       },
       "sectionTitle": "Результаты поиска"
     },
@@ -227,7 +234,7 @@
           "title": "Пользовательский прокси-сервер"
         }
       },
-      "title": "Давайте настроим movie-web"
+      "title": "Давайте настроим kami-movie"
     }
   },
   "overlays": {
@@ -244,10 +251,10 @@
     "menus": {
       "downloads": {
         "copyHlsPlaylist": "Скопировать ссылку на плейлист HLS",
-        "disclaimer": "Загрузки осуществляются непосредственно поставщиком. movie-web не контролирует способ предоставления загрузок.",
+        "disclaimer": "Загрузки осуществляются непосредственно поставщиком. kami-movie не контролирует способ предоставления загрузок.",
         "downloadSubtitle": "Скачать текущие субтитры",
         "downloadVideo": "Скачать видео",
-        "hlsDisclaimer": "Загрузки осуществляются непосредственно поставщиком. movie-web не контролирует способ предоставления загрузок.<br /><br />Обратите внимание на то, что вы скачиваете плейлист HLS, <bold>его не рекомендуется скачивать, если вы не знакомы с продвинутыми форматами потокового воспроизведения</bold>. Попробуйте разные источники для разных форматов.",
+        "hlsDisclaimer": "Загрузки осуществляются непосредственно поставщиком. kami-movie не контролирует способ предоставления загрузок.<br /><br />Обратите внимание на то, что вы скачиваете плейлист HLS, <bold>его не рекомендуется скачивать, если вы не знакомы с продвинутыми форматами потокового воспроизведения</bold>. Попробуйте разные источники для разных форматов.",
         "onAndroid": {
           "1": "Чтобы скачать на Android, нажмите на кнопку загрузки, затем на новой странице <bold>нажмите и удерживайте</bold> на видео, а затем выберите <bold>сохранить</bold>.",
           "shortTitle": "Скачать / Android",
@@ -390,7 +397,7 @@
       "shortRemaining": "-{{timeLeft}}"
     },
     "turnstile": {
-      "description": "Пожалуйста, подтвердите, что вы человек, заполнив форму Captcha справа. Это необходимо для обеспечения безопасности movie-web!",
+      "description": "Пожалуйста, подтвердите, что вы человек, заполнив форму Captcha справа. Это необходимо для обеспечения безопасности kami-movie!",
       "error": "Не удалось убедиться в том, что вы человек. Пожалуйста, попробуйте еще раз.",
       "title": "Мы должны убедиться, что вы человек.",
       "verifyingHumanity": "Убеждаемся в том, что вы человек..."
@@ -398,7 +405,7 @@
   },
   "screens": {
     "dmca": {
-      "text": "Добро пожаловать на контактную страницу movie-web по защите от DMCA! Мы уважаем права на интеллектуальную собственность и хотим оперативно решать любые проблемы, связанные с авторским правом. Если вы считаете, что ваш материал, защищенный авторским правом, был неправомерно использован на нашей платформе, отправьте подробное уведомление DMCA на указанный ниже адрес электронной почты. Пожалуйста, включите в него описание материала, защищенного авторским правом, ваши контактные данные и заявление о добросовестности ваших намерений. Мы стремимся оперативно решать подобные вопросы и ценим ваше сотрудничество, что позволяет movie-web оставаться местом, где уважается творчество и авторское право.",
+      "text": "Добро пожаловать на контактную страницу kami-movie по защите от DMCA! Мы уважаем права на интеллектуальную собственность и хотим оперативно решать любые проблемы, связанные с авторским правом. Если вы считаете, что ваш материал, защищенный авторским правом, был неправомерно использован на нашей платформе, отправьте подробное уведомление DMCA на указанный ниже адрес электронной почты. Пожалуйста, включите в него описание материала, защищенного авторским правом, ваши контактные данные и заявление о добросовестности ваших намерений. Мы стремимся оперативно решать подобные вопросы и ценим ваше сотрудничество, что позволяет kami-movie оставаться местом, где уважается творчество и авторское право.",
       "title": "DMCA"
     },
     "loadingApp": "Загрузка приложения",
@@ -527,6 +534,7 @@
       }
     },
     "subtitles": {
+      "backgroundBlurLabel": "Размытие фона",
       "backgroundLabel": "Прозрачность фона",
       "colorLabel": "Цвет",
       "previewQuote": "Я не должен бояться. Страх убивает разум.",
