--- a/src/assets/locales/uk.json
+++ b/src/assets/locales/uk.json
@@ -3,18 +3,18 @@
     "description": "kami-movie це веб-додаток, який шукає інтернет для стрімінгових відтворень. Команда прагне до мінімалістичного стилю в споживанні контенту.",
     "faqTitle": "Загальні питання",
     "q1": {
-      "body": "kami-movie не зберігає жодного контенту. Коли ви натискаєте щось для перегляду, в Інтернеті виконується пошук вибраного медіа (на екрані завантаження та на вкладці «джерела відео» ви можете побачити, яке джерело ви використовуєте). Медіафайли ніколи не завантажуються за допомогою \"movie-web\", усе відбувається через цей механізм пошуку.",
+      "body": "kami-movie не зберігає жодного контенту. Коли ви натискаєте щось для перегляду, в Інтернеті виконується пошук вибраного медіа (на екрані завантаження та на вкладці «джерела відео» ви можете побачити, яке джерело ви використовуєте). Медіафайли ніколи не завантажуються за допомогою \"kami-movie\", усе відбувається через цей механізм пошуку.",
       "title": "Звідки береться вміст?"
     },
     "q2": {
-      "body": "Неможливо подати запит на шоу чи фільм, оскільки movie-web не керує жодним вмістом. Весь контент переглядається через джерела в Інтернеті.",
+      "body": "Неможливо подати запит на шоу чи фільм, оскільки kami-movie не керує жодним вмістом. Весь контент переглядається через джерела в Інтернеті.",
       "title": "Де я можу подати запит на шоу чи фільм?"
     },
     "q3": {
       "body": "Наші результати пошуку надходять від The Movie Database (TMDB) і відображаються незалежно від того, чи насправді є вміст у наших джерелах.",
       "title": "Результати пошуку відображають шоу чи фільм, чому я не можу його відтворити?"
     },
-    "title": "Про movie-web"
+    "title": "Про kami-movie"
   },
   "actions": {
     "copied": "Скопійовано",
@@ -57,6 +57,8 @@
       },
       "host": "Ви під’єднуєтеся до <0>{{hostname}}</0> – підтвердьте, що довіряєте йому, перш ніж створювати обліковий запис",
       "no": "Повернутися назад",
+      "noHost": "Сервер не був налаштований, тому ви не можете створити обліковий запис",
+      "noHostTitle": "Сервер не налаштований!",
       "title": "Чи довіряєте ви цьому серверу?",
       "yes": "Я довіряю цьому серверу"
     },
@@ -80,7 +82,7 @@
   "footer": {
     "legal": {
       "disclaimer": "Застереження",
-      "disclaimerText": "movie-web не містить жодних файлів, він лише посилається на сторонні служби. Юридичні питання слід вирішувати з хостами та провайдерами файлів. movie-web не несе відповідальності за будь-які медіафайли, показані постачальниками відео."
+      "disclaimerText": "kami-movie не містить жодних файлів, він лише посилається на сторонні служби. Юридичні питання слід вирішувати з хостами та провайдерами файлів. kami-movie не несе відповідальності за будь-які медіафайли, показані постачальниками відео."
     },
     "links": {
       "discord": "Діскорд",
@@ -118,7 +120,12 @@
       "noResults": "Ми не змогли знайти нічого!",
       "placeholder": {
         "default": "Що ви хочете подивитися?",
-        "extra": []
+        "extra": [
+          "Що ви бажаєте дослідити?",
+          "Що у вашому списку спостереження?",
+          "Який ваш улюблений фільм?",
+          "Який ваш улюблений серіал?"
+        ]
       },
       "sectionTitle": "Результати пошуку"
     },
@@ -225,7 +232,7 @@
           "title": "Користувацький проксі"
         }
       },
-      "title": "Давайте налаштуємо вам movie-web"
+      "title": "Давайте налаштуємо вам kami-movie"
     }
   },
   "overlays": {
@@ -241,10 +248,11 @@
     },
     "menus": {
       "downloads": {
-        "disclaimer": "Завантаження беруться безпосередньо від провайдера. У movie-web немає контролю над тим, як надаються завантаження.",
+        "copyHlsPlaylist": "Копіювати посилання на плейлист HLS",
+        "disclaimer": "Завантаження беруться безпосередньо від провайдера. У kami-movie немає контролю над тим, як надаються завантаження.",
         "downloadSubtitle": "Завантажити поточні субтитри",
         "downloadVideo": "Завантажити відео",
-        "hlsDisclaimer": "Завантаження виконуються безпосередньо від постачальника. У movie-web немає контролю над тим, як надаються завантаження.<br /><br />Зверніть увагу, що ви завантажуєте список відтворення HLS, <bold>його не рекомендується завантажувати, якщо ви не знайомі з розширеними форматами потокового передавання</bold>. Спробуйте різні джерела для інших форматів.",
+        "hlsDisclaimer": "Завантаження виконуються безпосередньо від постачальника. У kami-movie немає контролю над тим, як надаються завантаження.<br /><br />Зверніть увагу, що ви завантажуєте список відтворення HLS, <bold>його не рекомендується завантажувати, якщо ви не знайомі з розширеними форматами потокового передавання</bold>. Спробуйте різні джерела для інших форматів.",
         "onAndroid": {
           "1": "Щоб завантажити на Android, натисніть кнопку завантаження, потім на новій сторінці <bold>торкніться й утримуйте</bold> відео, а потім виберіть <bold>зберегти</bold>.",
           "shortTitle": "Завантажити / Android",
@@ -387,7 +395,7 @@
       "shortRemaining": "-{{timeLeft}}"
     },
     "turnstile": {
-      "description": "Будь ласка, переконайтеся, що ви людина, заповнивши капчу праворуч. Це робиться для безпеки movie-web!",
+      "description": "Будь ласка, переконайтеся, що ви людина, заповнивши капчу праворуч. Це робиться для безпеки kami-movie!",
       "error": "Не вдалося підтвердити вашу людяність. Будь ласка, спробуйте ще раз.",
       "title": "Ми повинні переконатися, що ви людина.",
       "verifyingHumanity": "Перевіряємо вашу людяність..."
@@ -395,7 +403,7 @@
   },
   "screens": {
     "dmca": {
-      "text": "Вітаємо на нашій сторінці зв'язку DMCA! Ми поважаємо права інтелектуальної власності і хочемо вирішити будь-які проблеми з авторськими правами швидко. Якщо ви вважаєте, що ваші авторські права були неправильно використані на нашій платформі, будь ласка, надішліть детальне повідомлення DMCA на електронну адресу нижче. Будь ласка, вкажіть опис авторського матеріалу, ваші контактні дані та заяву про добросовісну віру. Ми зобов'язані вирішити ці питання оперативно і вдячні за вашу співпрацю в збереженні movie-web місцем, яке поважає творчість та авторські права.",
+      "text": "Вітаємо на нашій сторінці зв'язку DMCA! Ми поважаємо права інтелектуальної власності і хочемо вирішити будь-які проблеми з авторськими правами швидко. Якщо ви вважаєте, що ваші авторські права були неправильно використані на нашій платформі, будь ласка, надішліть детальне повідомлення DMCA на електронну адресу нижче. Будь ласка, вкажіть опис авторського матеріалу, ваші контактні дані та заяву про добросовісну віру. Ми зобов'язані вирішити ці питання оперативно і вдячні за вашу співпрацю в збереженні kami-movie місцем, яке поважає творчість та авторські права.",
       "title": "DMCA"
     },
     "loadingApp": "Завантаження застосунку",
@@ -524,6 +532,7 @@
       }
     },
     "subtitles": {
+      "backgroundBlurLabel": "Розмиття фону",
       "backgroundLabel": "Прозорість фону",
       "colorLabel": "Колір",
       "previewQuote": "Я не повинен боятися. Страх вбиває розум.",
