--- a/src/assets/locales/gl.json
+++ b/src/assets/locales/gl.json
@@ -87,7 +87,7 @@
       "dmca": "DMCA",
       "github": "GitHub"
     },
-    "tagline": "Disfruta das túas series e películas favoritas con esta aplicación de transmisión de código aberto."
+    "tagline": "Disfruta das túas series e películas favoritas con esta aplicación de transmisión kami-movie."
   },
   "global": {
     "name": "kami-movie",
