--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -89,7 +89,7 @@
       "dmca": "DMCA",
       "github": "GitHub"
     },
-    "tagline": "Watch your favourite shows and movies with this open source streaming app."
+    "tagline": "Watch your favourite shows and movies with this streaming app."
   },
   "global": {
     "name": "kami-movie",
