--- a/src/assets/locales/pt-BR.json
+++ b/src/assets/locales/pt-BR.json
@@ -89,7 +89,7 @@
       "dmca": "DMCA",
       "github": "GitHub"
     },
-    "tagline": "Assista seus programas e filmes favoritos com este aplicativo de streaming de código aberto."
+    "tagline": "Assista seus programas e filmes favoritos com este aplicativo de streaming."
   },
   "global": {
     "name": "kami-movie",
