--- a/src/assets/locales/pt-PT.json
+++ b/src/assets/locales/pt-PT.json
@@ -87,7 +87,7 @@
       "dmca": "DMCA",
       "github": "GitHub"
     },
-    "tagline": "Assista aos seus programas e filmes favoritos com esta aplicação de streaming de código aberto."
+    "tagline": "Assista aos seus programas e filmes favoritos com esta aplicação."
   },
   "global": {
     "name": "kami-movie",
